--- a/dogspace/src/rrbot_control/config/rrbot_control.yaml
+++ b/dogspace/src/rrbot_control/config/rrbot_control.yaml
@@ -7,7 +7,7 @@ rrbot:
   # Position Controllers ---------------------------------------
   joint1_position_controller:
     type: effort_controllers/JointPositionController
-    joint: joint_left_h1
+    joint: joint_camera
     pid: {p: 100.0, i: 0.01, d: 10.0}
   joint2_position_controller:
     type: effort_controllers/JointPositionController
