--- a/.travis.yml
+++ b/.travis.yml
@@ -122,4 +122,4 @@ script:
   # Run the tests, ensuring the path is set correctly.
   - source devel/setup.bash
   #- catkin_make run_tests && catkin_test_results
-  - python src/Robot_Dog/tests/test_talker.py
+  - rostest tests integration.launch
